# tt-bio

./: .gitignore  CHANGELOG.md  MANIFEST.in  NOTICE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yaml  release.yml
.perf-runs/20260621/: REPORT.md  ab_off_512.txt  ab_on_512.txt
.perf-runs/20260622/: REPORT.md
.perf-runs/20260623/: REPORT.md
.perf-runs/20260624/: REPORT.md  mesh_trimul.py  tp_trimul_spike.py  trimul_realcost.py
.perf-runs/20260625/: REPORT.md  hemoglobin_rmsd_evidence.txt  run_ab.sh  run_ab2.sh  warm_ab_raw.txt
.perf-runs/20260626/: REPORT.md
.perf-runs/20260627/: REPORT.md
.perf-runs/20260628/: REPORT.md
.perf-runs/20260629/: REPORT.md
.perf-runs/20260630/: REPORT.md  mesh_trunk_spike.py
.perf-runs/20260708-protenix-batch/: REPORT.md
.perf-runs/protenix-batch/: BASELINE.md  accuracy_trace.py  harness.py  micro_apb.py  micro_sdpa.py  parity_denoise.py
artifacts/: compat.json  feedback-snapshot.md  scaffold.err  scaffold.out
artifacts/ashwary-latest/: acestep-compat.out  acestep-plan.out  acestep-scaffold.err  acestep-scaffold.out  hunyuan-compat.out  hunyuan-plan.err  hunyuan-scaffold.err  longcat-compat.out  longcat-plan.out  longcat-scaffold.err  plan-hunyuan.err  plan-hunyuan.out
docs/: abodybuilder3-port.md  affinity-head.md  atomattention-kernel-scout.md  boltz2-dit-attention-kernel-scout.md  boltz2-fast-parity.md  boltz2-fusion-scout.md  boltz2-opendde-nvidia-comparison-plan.md  boltz2-protenix-kernel-scout.md  boltz2-trace-replay.md  boltz2-tt-vs-nvidia.md  boltzgen-batch-threshold-ceiling.md  boltzgen-designability.md  boltzgen-fusion-scout.md  boltzgen-resident-trunk.md  boltzgen-trace-replay.md  cold-start.md  difftransformer-swiglu-scout.md  dplm2-port.md  esmc-attention-kernel-scout.md  esmc-embeddings-parity.md  esmc-multicard-scaling.md  esmc-rope-fusion-release-gate.md  esmc-swiglu-fusion-scout.md  esmfold2-bf8-trunk-scout.md  esmfold2-e2e-parity.md  esmfold2-fusion-scout.md  implementation-parity-details.md  implementation-parity.md  interformer-port.md  kernel-scout-next.md  la-proteina-port.md  msa-pwa-scout.md  multicard-single-input-sharding-spike.md  opendde-fusion-scout.md  opendde-kernel-scout.md  opendde-port.md  opendde-trace-replay.md  openfold-port.md  openfold3-port.md  openfold3-weight-keys.txt  (+19 more)
docs/implementation-parity-data/: P3-seeds-progress.md  abag-arm3-decoy-pairs.json  abag-arm3-decoy-progress.jsonl  abag-arm3-final.json  abag-hard-negative-manifest.json  abag-n-expansion-candidates.json  abag-pilot-expansion-progress.json  abag-pilot-stage2-final.json  abag-pilot-stage2-progress.jsonl  abag-pilot-stage3-final.json  boltz2-affinity-dhfr-gpu-ref-floor.json  esmc-6b.json  (+34 more)
examples/: 1ahw_abag.yaml  9dsg_abag.yaml  affinity_dhfr.yaml  affinity_dhfr_msa.yaml  affinity_fkg.yaml  affinity_fkg_msa.yaml  affinity_tryp.yaml  affinity_tryp_msa.yaml  hsa.yaml  hsa_no_msa.yaml  opendde_covalent_bond.yaml  opendde_covalent_ligand.yaml  trpcage.yaml  ubiquitin_no_msa.yaml  ubq.yaml
notes/: opendde-msa-p7.md
scripts/: abag_arm3_analyze.py  abag_decoy_build.py  abag_decoy_fold.py  abag_expansion_analyze.py  abag_expansion_fold.py  abag_hard_negative_fold.py  abag_pae_metrics.py  abag_pilot_score_all.py  abag_pilot_stage2_analyze.py  abag_pilot_stage2_fold.py  abag_pilot_stage3_analyze.py  abag_pilot_stage3_opendde_fold.py  abb3_golden.py  abb3_hybrid_bisect.py  abb3_ipa_bisect.py  abb3_ipa_internals.py  abb3_perf.py  abb3_predict.py  atomattention_kernel_scout.py  boltz2_affinity_gpu_vs_cpu_pocket.py  boltz2_affinity_parity.py  boltz2_affinity_scalar_gpu_vs_cpu.py  boltz2_fast_parity.py  boltz2_protenix_kernel_scout.py  boltz2_pwa_fusion_scout.py  boltz2_ref_layout.py  boltzgen_batch_parity.py  boltzgen_designability.py  covalent_bond_check.py  dit_attention_kernel_scout.py  esmc6b_embed_parity.py  esmc6b_shared_cache_parity.py  esmc_attention_profile.py  esmc_batch_parity.py  esmc_embed_parity.py  esmc_multicard_parity.py  esmc_rotary_fusion_ab.py  esmfold2_det_diag.py  esmfold2_e2e_parity.py  esmfold2_gb1_localize.py  (+100 more)
tests/: abodybuilder3_reference.py  affinity_reference.py  ca_rmsd.py  dplm2_reference.py  esmc_reference.py  esmfold2_reference.py  generate_synthetic_template.py  interformer_checkpoint.py  interformer_reference.py  interformer_reference_energy.py  protenix_reference.py  test_abodybuilder3_parity.py  test_abodybuilder3_ttnn_components.py  test_affinity.py  test_boltzgen_designability.py  test_boltzgen_regression.py  test_constraints.py  test_design_info_requires_design_residue.py  test_device_lease.py  test_device_lease_hw.py  test_dplm2.py  test_esmc.py  test_esmfold2.py  test_esmfold2_cif_write.py  test_input_validation.py  test_interformer.py  test_interformer_energy_realweights.py  test_interformer_eol_parity.py  test_interformer_realweights.py  test_msa_cache_key.py  test_msa_default.py  test_opendde_covalent_ligand.py  test_openfold3_atom_transformer.py  test_openfold3_confidence.py  test_openfold3_diffusion_conditioning.py  test_openfold3_diffusion_decoder.py  test_openfold3_diffusion_module_xlout.py  test_openfold3_diffusion_transformer.py  test_openfold3_fold_rmsd.py  test_openfold3_input_embedder.py  (+30 more)
tt_bio/: __init__.py  abodybuilder3.py  abodybuilder3_weights.py  affinity.py  boltz2.py  device_lease.py  distributed.py  dplm2.py  dplm2_sampler.py  esmc.py  esmfold2.py  install_system_deps.py  interformer.py  interformer_energy.py  main.py  msa_server.py  odesign.py  opendde.py  opendde_data.py  openfold.py  openfold3.py  openfold3_atom_transformer.py  openfold3_confidence.py  openfold3_data.py  openfold3_diffusion.py  openfold3_diffusion_decoder.py  openfold3_diffusion_module.py  openfold3_diffusion_transformer.py  openfold3_fold.py  openfold3_msa_embedder.py  openfold3_sample_diffusion.py  openfold3_template.py  openfold3_trunk.py  openfold3_weights.py  openfold_weights.py  progress.py  proteinmpnn.py  proteinmpnn_data.py  protenix.py  protenix_data.py  (+10 more)
workstreams/: tt-hw-planner-acestep.md  tt-hw-planner-hunyuan.md  tt-hw-planner-longcat-video.md
(+778 files in other folders)
