[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tt-bio"
version = "0.2.0"
description = "Boltz-2 implementation for inference on Tenstorrent Blackhole and Wormhole"
requires-python = ">=3.10,<3.13,!=3.11.*"
dependencies = [
    "torch",
    "numpy",
    "rdkit",
    "requests",
    "pandas",
    "einops",
    "mashumaro",
    "modelcif",
    "click",
    "pyyaml",
    "omegaconf",  # only needed to unpickle DictConfig objects baked into upstream ckpts
    "biopython",
    "biotite",
    "matplotlib",
    "scipy",
    "numba",
    "gemmi",
    "scikit-learn",
    "chembl_structure_pipeline",
    "hydride",
    "pydssp",
    "tqdm",
    "rich",
    # SECURITY (UNVALIDATED — do not merge until parity re-run on TT hardware):
    # transformers 5.3.0 is the minimum version fixing BOTH Dependabot alerts on 4.57.6 —
    # CVE-2026-4372 (config-injection RCE, fixed 5.3.0) and CVE-2026-1839 (Trainer torch.load,
    # fixed 5.0.0rc3). There is no 4.x backport. 5.3.0 forces huggingface_hub>=1.3.0,<2.0,
    # so the <1.0 pin below had to be relaxed too. The vendored ESMFold2 imports transformers
    # internals (PreTrainedModel/PretrainedConfig/models.esmc) and esmc.py depends on the
    # huggingface_hub <1.0 API — this is both a 4->5 and an hf_hub 0->1 major bump. Re-run the
    # full parity suite (ESMC / ESMFold2 / Boltz-2) before merging; numerics must be identical.
    "huggingface_hub>=1.3.0,<2.0",  # was <1.0; transformers 5.3.0 requires >=1.3.0
    "safetensors",          # esmc.py: safe_open for the sharded 6B checkpoint
    # ESMFold2 reference code is vendored under tt_bio/_vendor (see NOTICE); these
    # are the stock PyPI runtime deps it needs — no git clones / external repos.
    "transformers==5.3.0",  # was 4.57.6; SECURITY bump (see note above) — UNVALIDATED for parity
    "zstd",                  # esm MSA utils (vendored)
    "msgpack-numpy",         # esm structure serialization (vendored)
    "brotli",                # esm (vendored)
    "cloudpathlib",          # esm (vendored)
    # Protenix-v2 adds NO new dependencies: the on-device model + its data pipeline are
    # pure torch/ttnn (canonical-CCD conformers bundled as JSON, no rdkit/gemmi at runtime),
    # and weights come from the Hugging Face mirror via huggingface_hub (no clone).
    "ttnn==0.68.0",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
tt-bio = "tt_bio.main:cli"

[tool.setuptools]
license-files = ["LICENSE", "NOTICE"]

[tool.setuptools.packages.find]
include = ["tt_bio*"]

[tool.setuptools.package-data]
# ship the vendored third-party license texts inside the wheel (see NOTICE)
"tt_bio._vendor.esm" = ["LICENSE"]
"tt_bio._vendor.esmfold2_hf" = ["LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
