[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tt-bio"
version = "0.3.0"
description = "Boltz-2, ESMFold2, Protenix-v2, and OpenDDE structure prediction, BoltzGen binder design, and ESMC protein embeddings for inference on Tenstorrent Blackhole and Wormhole"
readme = "README.md"
requires-python = ">=3.10,<3.13,!=3.11.*"
dependencies = [
    "torch",
    "numpy",
    "rdkit",
    "requests",
    "pandas",
    "einops",
    "mashumaro",
    "modelcif",
    "click",
    "pyyaml",
    "omegaconf",  # only needed to unpickle DictConfig objects baked into upstream ckpts
    "biopython",
    "biotite",
    "matplotlib",
    "scipy",
    "numba",
    "gemmi",
    "scikit-learn",
    "chembl_structure_pipeline",
    "hydride",
    "pydssp",
    "tqdm",
    "rich",
    "huggingface_hub<1.0",  # esmc.py weight download; <1.0 also matches the vendored ESMFold2 model
    "safetensors",          # esmc.py: safe_open for the sharded 6B checkpoint
    # ESMFold2 reference code is vendored under tt_bio/_vendor (see NOTICE); these
    # are the stock PyPI runtime deps it needs — no git clones / external repos.
    "transformers==4.57.6",  # the vendored ESMFold2 model runs on the stock transformers core
    "zstd",                  # esm MSA utils (vendored)
    "msgpack-numpy",         # esm structure serialization (vendored)
    "brotli",                # esm (vendored)
    "cloudpathlib",          # esm (vendored)
    # Protenix-v2 adds NO new dependencies: the on-device model + its data pipeline are
    # pure torch/ttnn (canonical-CCD conformers bundled as JSON, no rdkit/gemmi at runtime),
    # and weights come from the Hugging Face mirror via huggingface_hub (no clone).
    "ttnn==0.68.0",
    # OpenFold3 host-side data pipeline is vendored under tt_bio/_vendor (see NOTICE);
    # these are the stock PyPI runtime deps it needs for query-JSON featurization.
    "pydantic",         # Query/settings schema (inference_query_format, dataset_config_components)
    "pdbeccdutils",      # CCD (Chemical Component Dictionary) residue/ligand lookup
    "func_timeout",      # bounds RDKit reference-conformer generation
    "networkx",          # connected-components on CCD bond graphs (structure/cleanup.py)
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
tt-bio = "tt_bio.main:cli"

[tool.setuptools]
license-files = ["LICENSE", "NOTICE"]

[tool.setuptools.packages.find]
include = ["tt_bio*"]

[tool.setuptools.package-data]
# ship the vendored third-party license texts inside the wheel (see NOTICE)
"tt_bio._vendor.esm" = ["LICENSE"]
"tt_bio._vendor.esmfold2_hf" = ["LICENSE"]
"tt_bio._vendor.openfold3" = ["LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
