[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tt-bio"
version = "0.3.4"
description = "Boltz-2, ESMFold2, Protenix-v2, and OpenDDE structure prediction, BoltzGen binder design, and ESMC/SaProt protein embeddings for inference on Tenstorrent Blackhole and Wormhole"
readme = "README.md"
requires-python = ">=3.10,<3.13,!=3.11.*"
dependencies = [
    "torch",
    "numpy",
    "rdkit",
    "requests",
    "pandas",
    "einops",
    "mashumaro",
    "modelcif",
    "click",
    "pyyaml",
    "omegaconf",  # only needed to unpickle DictConfig objects baked into upstream ckpts
    "biopython",
    "biotite",
    "matplotlib",
    "scipy",
    "numba",
    "gemmi",
    "scikit-learn",
    "chembl_structure_pipeline",
    "hydride",
    "pydssp",
    "tqdm",
    "rich",
    "huggingface_hub>=1.5.0,<2.0",  # esmc.py weight download; transformers>=5.3 requires >=1.5.0
    "safetensors",          # esmc.py: safe_open for the sharded 6B checkpoint
    # ESMFold2 reference code is vendored under tt_bio/_vendor (see NOTICE); these
    # are the stock PyPI runtime deps it needs — no git clones / external repos.
    # >=5.5.0 clears all 3 open dependabot alerts (#3 Trainer RCE fixed 5.0.0rc3,
    # #4 config.json RCE fixed 5.3.0, #5 LightGlue RCE fixed 5.5.0 -- N/A to tt-bio,
    # no LightGlue usage). CPU-level bit-exact parity verified (transformers
    # 4.57.6 -> 5.5.0/5.14.1, same torch, same weights, same seed):
    # ~/.coworker/state/tt-bio-dependabot-transformers-triage.md.
    "transformers>=5.5.0,<6.0",  # the vendored ESMFold2 model runs on the stock transformers core
    "zstd",                  # esm MSA utils (vendored)
    "msgpack-numpy",         # esm structure serialization (vendored)
    "brotli",                # esm (vendored)
    "cloudpathlib",          # esm (vendored)
    # Protenix-v2 adds NO new dependencies: the on-device model + its data pipeline are
    # pure torch/ttnn (canonical-CCD conformers bundled as JSON, no rdkit/gemmi at runtime),
    # and weights come from the Hugging Face mirror via huggingface_hub (no clone).
    "ttnn==0.68.0",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
tt-bio = "tt_bio.main:cli"

[tool.setuptools]
license-files = ["LICENSE", "NOTICE"]

[tool.setuptools.packages.find]
include = ["tt_bio*"]

[tool.setuptools.package-data]
# ship the vendored third-party license texts inside the wheel (see NOTICE)
"tt_bio._vendor.esm" = ["LICENSE"]
"tt_bio._vendor.esmfold2_hf" = ["LICENSE"]
# runtime data files the package loads by path at import/featurize time — these
# MUST ship in the wheel/sdist or a clean `pip install` crashes (see v0.3.4 changelog):
#   - tt_bio/data/protein_ref_conformers.json: protenix-v2 + opendde featurization
#   - tt_bio/boltzgen/resources/**: every `tt-bio gen` design (config yamls, splits, metrics)
"tt_bio.data" = ["*.json"]
"tt_bio.boltzgen" = ["LICENSE"]
"tt_bio.boltzgen.resources" = ["*.json"]
"tt_bio.boltzgen.resources.config" = ["*.yaml"]
"tt_bio.boltzgen.resources.splits" = ["*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
